<resources>
    <string name="app_name">Fashion E-commerace</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <string name="onboarding_title">20% Discount \nNew Arrival Product</string>
    <string name="onboarding_titlee">Take Advantage Of The Offer Shopping </string>
    <string name="onboarding_titleee">All Types Offers Within Your Reach</string>

    <string name="onboarding_desc">Publish up your selfies to make yourself \nmore beautiful with this app.</string>
    <string name="welcome">Welcome!</string>
    <string name="login_text_description">please login or sign up to continue our app</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="create_an_new_account">Create an new account</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_condition"><![CDATA[By creating an account you have to agree \n with our them & condication.]]></string>
    <string name="success_register">You have successfully registered in \nour app and start working in it.</string>
    <string name="start_shopping">Start Shopping</string>

    <string name="web_client_id">1089891459774-dcdroqu44hbj4t3li87n26hvmboro62o.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="size">Size</string>
    <string name="description">Description</string>

    <string name="facebook_app_id">676061713903836</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="my_cart">My Cart</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="personal_details">Personal Details</string>
    <string name="my_order">My Order</string>
    <string name="my_favorites">My Favorites</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="my_card">My Card</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="upload_image">Upload Image</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">LogOut</string>
    <string name="activities">Activities</string>
    <string name="messages">Messages</string>
    <string name="wishlist">Wishlist</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="select_language">Select Language</string>
    <string name="credit_cart">Credit Cart</string>
    <string name="paypal">Paypal</string>
    <string name="visa">Visa</string>
    <string name="google_pay">Google Pay</string>
    <string name="history">History</string>


</resources>