<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_item"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/black"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/light_grey" />

    <item
        android:id="@+id/cart_item"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/cart"
        app:cnb_backgroundColor="@color/black"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/light_grey" />

    <item
        android:id="@+id/notification_item"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification"
        app:cnb_backgroundColor="@color/black"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/light_grey" />

    <item
        android:id="@+id/person_item"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/black"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/light_grey" />
</menu>