<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/login_image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/image_splash1_text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/login_image2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/image_splash1_text2"
        app:layout_constraintEnd_toEndOf="@id/login_image1"
        app:layout_constraintTop_toBottomOf="@id/login_image1"
        app:tint="@color/black" />


    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/black"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="48dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_image2" />

    <TextView
        android:id="@+id/login_text_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:text="@string/login_text_description"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text_welcome" />

    <TextView
        android:id="@+id/login_text_email"
        style="@style/LoginTextStyle"
        android:layout_marginTop="43dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text_desc" />

    <EditText
        android:id="@+id/login_edit_text_email"
        style="@style/LoginEditTextStyle"
        android:hint="mjdym7701@gmail.com"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/login_text_email"
        app:layout_constraintTop_toBottomOf="@id/login_text_email" />

    <TextView
        android:id="@+id/login_text_password"
        style="@style/LoginTextStyle"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_edit_text_email" />

    <EditText
        android:id="@+id/login_edit_text_password"
        style="@style/LoginEditTextStyle"
        android:hint="***********"

        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/login_text_password"
        app:layout_constraintTop_toBottomOf="@id/login_text_password" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:orientation="horizontal"
        android:weightSum="7"
        app:layout_constraintStart_toStartOf="@id/login_btn_login"
        app:layout_constraintTop_toBottomOf="@id/login_btn_login">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="2.7"
            android:background="@color/light_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="2.5"
            android:background="@color/light_grey" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn_login"
        style="@style/AuthBtn"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_edit_text_password" />

    <LinearLayout
        android:id="@+id/login_facebook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="53dp"
        android:background="@drawable/facebook_bg"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/login_btn_login">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/facebook_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:text="@string/continue_with_facebook"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_gmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/gmail_bg"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/login_facebook">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/gmail_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:text="@string/continue_with_google"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_apple"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/gmail_bg"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/login_gmail">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/apple_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:text="@string/continue_with_apple"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>