<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.signup.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ProgressBar
            android:id="@+id/signup_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/black"
            android:visibility="invisible"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/signup_image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:src="@drawable/image_splash1_text1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />
        <ImageView
            android:id="@+id/signup_image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/image_splash1_text2"
            app:layout_constraintEnd_toEndOf="@id/signup_image1"
            app:layout_constraintTop_toBottomOf="@id/signup_image1"
            app:tint="@color/black" />
        <TextView
            android:id="@+id/signup_text_signup"
            style="@style/LoginTextStyle"
            android:layout_marginTop="60dp"
            android:text="@string/sign_up"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_image2" />
        <TextView
            android:id="@+id/signup_text_createaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:text="@string/create_an_new_account"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_text_signup" />
        <TextView
            android:id="@+id/signup_text_user_name"
            style="@style/LoginTextStyle"
            android:layout_marginTop="40dp"
            android:text="@string/user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_text_createaccount" />
        <EditText
            android:id="@+id/signup_edit_text_user_name"
            style="@style/LoginEditTextStyle"
            android:hint="mohamed magdy"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@id/signup_text_user_name"
            app:layout_constraintTop_toBottomOf="@id/signup_text_user_name" />
        <TextView
            android:id="@+id/signup_text_email"
            style="@style/LoginTextStyle"
            android:layout_marginTop="24dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_edit_text_user_name" />
        <EditText
            android:id="@+id/signup_edit_text_email"
            style="@style/LoginEditTextStyle"
            android:hint="mohamed magdy"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="@id/signup_text_email"
            app:layout_constraintTop_toBottomOf="@id/signup_text_email" />
        <TextView
            android:id="@+id/signup_text_password"
            style="@style/LoginTextStyle"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_edit_text_email" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_input_layout_password"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_text_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_input_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/signup_text_confirm_password"
            style="@style/LoginTextStyle"
            android:layout_marginTop="24dp"
            android:text="@string/confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_input_layout_password" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_input_layout_confirm_password"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_text_confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_input_edit_text_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:paddingTop="32dp"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/signup_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_input_layout_confirm_password" />

        <TextView
            android:id="@+id/signup_text_agree_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="22dp"
            android:text="@string/agree_condition"
            android:textColor="@color/light_grey2"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/signup_checkbox"
            app:layout_constraintStart_toEndOf="@id/signup_checkbox"
            app:layout_constraintTop_toTopOf="@id/signup_checkbox" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_btn_sign_up"
            style="@style/AuthBtnSignup"
            android:text="@string/sign_up"
            android:enabled="false"

            android:background ="@drawable/signup_btn_bg"
            android:layout_marginTop="29dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_checkbox" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>