<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PaymentFragment">

    <View
        android:id="@+id/payment_icon_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/onboarding_elips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/icon_back"
        app:layout_constraintBottom_toBottomOf="@+id/payment_icon_back"
        app:layout_constraintEnd_toEndOf="@+id/payment_icon_back"
        app:layout_constraintStart_toStartOf="@+id/payment_icon_back"
        app:layout_constraintTop_toTopOf="@+id/payment_icon_back" />

    <TextView
        android:id="@+id/payment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="27dp"
        android:text="Payment"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_icon_back" />

    <RadioGroup
        android:id="@+id/payment_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_text">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/item_languge_background"
            android:buttonTint="@color/dark_grey"
            android:checked="false"
            android:drawableEnd="@drawable/icon"
            android:drawablePadding="12dp"
            android:elevation="4dp"
            android:layoutDirection="rtl"
            android:padding="16dp"
            android:text="@string/credit_cart"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/item_languge_background"
            android:buttonTint="@color/dark_grey"
            android:checked="false"
            android:drawableEnd="@drawable/icon_1"
            android:drawablePadding="12dp"
            android:elevation="4dp"
            android:layoutDirection="rtl"
            android:padding="16dp"
            android:text="@string/paypal"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/item_languge_background"
            android:buttonTint="@color/dark_grey"
            android:checked="false"
            android:drawableEnd="@drawable/icon_2"
            android:drawablePadding="12dp"
            android:elevation="4dp"
            android:layoutDirection="rtl"
            android:padding="16dp"
            android:text="@string/visa"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/item_languge_background"
            android:buttonTint="@color/dark_grey"
            android:checked="false"
            android:drawableEnd="@drawable/icon_3"
            android:drawablePadding="12dp"
            android:elevation="4dp"
            android:layoutDirection="rtl"
            android:padding="16dp"
            android:text="@string/google_pay"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/payment_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_radio_group">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/item_layout_add_card_bg">

            <ImageView
                android:id="@+id/payment_icon_add_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/item_add_card_bg"
                android:padding="14dp"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="Add Card"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/payment_icon_add_card"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/payment_text_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="27dp"
        android:text="@string/history"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_card" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/payment_history_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_text_history" />
</androidx.constraintlayout.widget.ConstraintLayout>